Fix flexbox on Safari

--- a/themes/default/stylesheets/bottomNav.scss
+++ b/themes/default/stylesheets/bottomNav.scss
@@ -9,11 +9,13 @@
           animation: fadeIn 0.2s ease-out 0.4s 1 normal forwards;
 
   ul {
+    display: -webkit-flex;
     display: flex;
   }
 
   li {
-    flex-grow: 1;
+    -webkit-flex-grow: 1;
+            flex-grow: 1;
   }
 
   a {
